# incu-bar

./: .gitignore  AGENTS.md  FEATURE_PARITY.md  FEATURE_PARITY.test.cjs  LICENSE  README.md  aboutAdvancedDisplayDebugParity.test.cjs  autoEnableAuthenticatedProviders.test.cjs  cleanupUnlistenPromises.test.cjs  codexbarCliParity.test.cjs  cookieSources.test.cjs  crashRecovery.test.cjs  debugMenuSettings.test.cjs  freshnessStatusLine.test.cjs  index.html  installOrigin.test.cjs  launchAtLogin.test.cjs  linuxCliPipeline.test.cjs  lowCreditsNotifications.test.cjs  manualRefreshHotkey.test.cjs  menuBarDisplayTextOptions.test.cjs  menuBarHighestUsage.test.cjs  notificationPreferences.test.cjs  opencode.json  optionalCreditsExtraUsage.test.cjs  package-lock.json  package.json  privacyPreferences.test.cjs  providerEnableEmptyState.test.cjs  providerErrorDetailView.test.cjs  providerOrderSubscription.test.cjs  providerSettingsPane.test.cjs  providersSettingsUiParity.test.cjs  reactHooksDeps.test.cjs  refreshFailureNotifications.test.cjs  releaseChecklistParity.test.cjs  resetTimeDisplay.test.cjs  sessionQuotaNotifications.test.cjs  settingsPersistenceMigration.test.cjs  staleUsageNotifications.test.cjs  (+11 more)
.github/: copilot-instructions.md
.ralphy/: config.yaml
scripts/: prepare-dmg.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_cookies.rs  debug_settings.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/login/: mod.rs
src-tauri/src/providers/: amp.rs  antigravity.rs  augment.rs  claude.rs  codex.rs  copilot.rs  cost_usage.rs  cursor.rs  factory.rs  gemini.rs  jetbrains.rs  kimi.rs  kimi_k2.rs  kiro.rs  minimax.rs  mod.rs  opencode.rs  synthetic.rs  traits.rs  zai.rs
src-tauri/src/storage/: install_origin.rs  keyring.rs  mod.rs  secure_delete.rs  widget_snapshot.rs
src-tauri/src/tray/: mod.rs
tests/: FEATURE_PARITY.test.cjs  aboutAdvancedDisplayDebugParity.test.cjs  autoEnableAuthenticatedProviders.test.cjs  cleanupUnlistenPromises.test.cjs  codexbarCliParity.test.cjs  cookieSources.test.cjs  copilotTimeoutRegression.test.cjs  crashRecovery.test.cjs  debugMenuSettings.test.cjs  freshnessStatusLine.test.cjs  incubarCliParity.test.cjs  installOrigin.test.cjs  launchAtLogin.test.cjs  linuxCliPipeline.test.cjs  lowCreditsNotifications.test.cjs  manualRefreshHotkey.test.cjs  manualUpdateControls.test.cjs  menuBarDisplayTextOptions.test.cjs  menuBarHighestUsage.test.cjs  notificationPreferences.test.cjs  optionalCreditsExtraUsage.test.cjs  privacyPreferences.test.cjs  providerEnableEmptyState.test.cjs  providerErrorDetailView.test.cjs  providerOrderSubscription.test.cjs  providerSettingsPane.test.cjs  providersSettingsUiParity.test.cjs  reactHooksDeps.test.cjs  refreshFailureNotifications.test.cjs  releaseChecklistParity.test.cjs  resetTimeDisplay.test.cjs  sessionQuotaNotifications.test.cjs  settingsPanelControls.test.cjs  settingsPersistenceMigration.test.cjs  (+10 more)
(+23 files in other folders)
