[package]
name = "incubar-tauri"
version = "0.1.0"
description = "AI Usage Tracker - Cross-platform menu bar app"
authors = ["you"]
edition = "2021"

[lib]
name = "incubar_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
keyring = "3"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
once_cell = "1"
url = "2"
dirs = "6"
glob = "0.3"
cookie = "0.18"
# Browser cookie extraction (Chrome, Safari, Firefox, etc.)
decrypt-cookies = { version = "0.10", features = ["Safari"] }
# Window positioner for tray-relative positioning
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
# Base64 encoding/decoding for JWT tokens
base64 = "0.22"
# Auto-start at login
tauri-plugin-autostart = "2"
